[metadata]
name = dirops
version = 0.0.1
author = Nathan Page
author_email = nathanpage2018@gmail.com
description = A small package to perform directory (folder) operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ndpage/directory-operations
project_urls =
    Bug Tracker = https://github.com/ndpage/directory-operations
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src